<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#fffeeb">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mobius_address"
                android:inputType="text" />

            <ToggleButton
                android:id="@+id/toggleButton_Addr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/addr_unset"
                android:textOn="@string/addr_set" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRetrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|start"
                android:layout_margin="5dp"
                android:layout_weight="6.60"
                android:text="@string/btn_co2" />

            <Switch
                android:id="@+id/switch_mqtt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_switch"
                android:textAlignment="center"
                android:textColor="#0019fd" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollViewText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.50"
            android:background="#575c72">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textViewData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/textview_about"
                    android:textColor="#fdfcfc" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/btnControl_Green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#356e4a"
                android:textColorHighlight="#b34444"
                android:textOff="@string/btn_green_off"
                android:textOn="@string/btn_green_on"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/btnControl_Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#275de6"
                android:textColorHighlight="#fa0505"
                android:textOff="@string/btn_blue_off"
                android:textOn="@string/btn_blue_on"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
